--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="unity-fullscreen-button"></div>
       </div>
     </div>
-    <script>
+    <script crossorigin="anonymous">
 
       const urlParams = new URLSearchParams(window.location.search)
 
