--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "https://containerdemaquetes.blob.core.windows.net/maquetes/" + idModel;
+      var buildUrl = "https://postsimages.blob.core.windows.net/virtualmodels/" + idModel;
       var loaderUrl = buildUrl + "/" + idModel + ".loader.js";
       var config = {
         dataUrl: buildUrl + "/" + idModel + ".data.unityweb",
